--- a/cogo.css
+++ b/cogo.css
@@ -13,7 +13,7 @@
 
 /* 문제 */
 .quiz_end {
-    display: none !important;
+    /*display: none !important;*/
     background-color: #4cdb98 !important;
 }
 
